# reach4pitch-postmortrem

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bootstrap.sh  db.json  db_backup.json  manage.py  pyproject.toml  refresh_data.sh
.github/workflows/: deploy.yml  django.yml
backend/: admin.py  constants.py  context_processors.py  forms.py  formsets.py  jobs.py  managers.py  models.py  urls.py  views.py
backend/management/commands/: fixdata.py
backend/migrations/: 0001_initial.py  0002_subscriber.py  0003_webhook.py  0004_alter_publisher_platforms.py  0005_alter_review_publisher.py  0006_alter_pitch_platforms_alter_pitch_services_and_more.py  0007_notification.py  0008_publisher_email.py  0009_notification_seen_at_alter_user_publisher.py  0010_alter_abusereport_description_and_more.py  0011_alter_abusereport_pitch.py  0012_resolution_description_alter_abusereport_description_and_more.py  0013_pitch_is_abused.py  0014_pitch_is_resolved.py
backend/static/scripts/: base.js  editor.js  modal.js  pitch.js  signup.js
backend/templates/: 404.html  base.html  index.html
backend/templates/flatpages/: default.html
backend/templates/pitches/: abuse_email.html  abuse_email_subject.txt  abuse_notification.html  create.html  details.html  list.html  new_email.html  new_email_subject.txt  new_notification.html  placeholder.html  reviewed_email.html  (+3 more)
conf/: README.md  env.sample  gunicorn.service.sample  gunicorn.socket.sample  nginx.conf.sample  rq.service.sample
reach4pitch/: asgi.py  settings.py  urls.py  wsgi.py
tests/: runner.py  test_backend.py
(+15 files in other folders)
